Implementation : Back button changes to client.
git-svn-id: https://mifos.svn.sourceforge.net/svnroot/mifos/trunk@10840 a8845c50-7012-0410-95d3-8e1449b9b1e4